--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -41,7 +41,7 @@
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1268px) {
   .navbar {
     width: 100%;
     height: 56px;
@@ -65,6 +65,9 @@
     align-items: center;
     width: 65%;
   }
+  .nav_menu {
+    margin-left: 47px;
+  }
   .nav_menu li {
     margin: 0 20px;
     padding: 0;
@@ -73,6 +76,12 @@
 
 @media screen and (max-width: 425px) {
   .logo_and_menu {
-    width: 85%;
+    width: 25%;
+  }
+  .nav_menu {
+    margin-left: 30px;
+  }
+  .nav_menu li {
+    margin: 0 10px;
   }
 }
